--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ionic/lab": "^3.2.9",
     "add": "^2.0.6",
     "firebase": "^7.24.0",
+    "firestore": "^1.1.6",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
